--- a/Deckel-Shop/Views/Home/News.cshtml
+++ b/Deckel-Shop/Views/Home/News.cshtml
@@ -15,66 +15,90 @@
             <div class="col-md-12">
                 <h3 class="text-center">
                     News from Deckel-Shop
-                    <p><small>Your source for the latest Deckel-Shop, Inc stories</small></p>
                 </h3>
                 <div class="row">
-                    <div class="col-md-6">
-                        <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                    <div class="col-md-4">
+                        <h5>
+                            2021-02-04
+                        </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/PirateGirl.jpg" height="200" />
+
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <p>
-                            Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                            <br />
+                            <br />
+                            <br />
+                            The pirate collection is now available on our website
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
-                        <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                    <div class="col-md-8">
+                        <h5>
+                            2021-01-27
+                        </h5>
+                        <p>
+                            We have found the first known propeller cap. A very exclusive cap that we only have one in stock.
+                            Take the chance and buy the world's first propeller cap and brag to your friends.
+                        </p>
                     </div>
-                    <div class="col-md-6">
-                        <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <blockquote class="blockquote">
-                            <p class="mb-0">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                            </p>
-                            <footer class="blockquote-footer">
-                                Someone famous in <cite>Source Title</cite>
-                            </footer>
-                        </blockquote>
-                    </div>
-                    <div class="col-md-6">
-                        <blockquote class="blockquote">
-                            <p class="mb-0">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                            </p>
-                            <footer class="blockquote-footer">
-                                Someone famous in <cite>Source Title</cite>
-                            </footer>
-                        </blockquote>
+                    <div class="col-md-4">
+                        <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/RobertMayerWithCap.jpg" height="200" />
+
                     </div>
                 </div>
+                <hr />
                 <div class="row">
-                    <div class="col-md-6">
-                        <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                    <div class="col-md-4">
+                        <h5>
+                            2021-01-16
+                        </h5>
+                        <img class="img-thumbnail w-75" alt="Bootstrap Image Preview" src="~/Image/PropelerCap1.jpg" />
+
                     </div>
-                    <div class="col-md-6">
-                        <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                    <div class="col-md-8">
+                        <br />
+                        <br />
+                        <br />
+                        <p>
+                            We fixed the problem. The site is up and runnning again after yesterdays crash. We moved to a new server and the problem will
+                            never happen again.
+                        </p>
                     </div>
                 </div>
+                <hr />
                 <div class="row">
-                    <div class="col-md-12">
-                        <blockquote class="blockquote">
-                            <p class="mb-0">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-                            </p>
-                            <footer class="blockquote-footer">
-                                Someone famous in <cite>Source Title</cite>
-                            </footer>
-                        </blockquote>
+                    <div class="col-md-8">
+                        <h5>
+                            2021-01-15
+                        </h5>
+                        <p>
+                            We updated the shop with products. And what happens. The site has crashed but we have hired people who have fixed it.
+                            We are overwhelmed by how the response has been. The site is up again in a few hours.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/AdmiralCap.jpg" height="200" />
+
+                    </div>
+                </div>
+                <hr />
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>
+                            2021-01-01
+                        </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Deckel-Shop-Logo2.png" height="200" />
+
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <br />
+                            <br />
+                            <br />
+                            <strong>We are up and running.</strong> Alex and Andreas have started the world's best cap business.
+                            Spread the information to everyone you know. We'll take over the world. We are newly
+                            started but we will expand our range regularly. Welcome to the Deckel Shop.
+                        </p>
                     </div>
                 </div>
             </div>
