Fixed wrong text

--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -48,7 +48,7 @@
                 <p>
                     At first i was a simple web designer, working a low end job with no future ahead of me. Then i meet Andreas and he came to me with a story.... a story that would <strong>change my perception of the world forever!</strong>
                     It started at a cafeé where he told me about this idea to start a shop selling propeller caps, first i thought himd mad. but then he showed me the possibilities and what economical gain that untapped marked had.
-                    And now here we are, opening our sixth store in Sweden with plans to open up internationally! Im looking forward to showing the world our craft and to bring joy that is the propeler cap!
+                    And now here we are, opening our sixth store in Sweden with plans to open up internationally! Im looking forward to showing the world our craft and to bring joy that is the propeller cap!
                     <small>Though i wish Andreas would have told me about the pact with demonic entities before i signed the blood contract</small>
                 </p>
             </div>
@@ -57,8 +57,8 @@
         <div class="row">
             <div class="col-md-8">
                 <p>
-                    "It was either this or keep working at the warehouse" Yahya told the interviewer. <small>Secretly though Yahya was a multi-billionare supporting the propeler cap buissnes to ensure 
-                    the joy of the propeler cap is spread throughout the world</small>
+                    "It was either this or keep working at the warehouse" Yahya told the interviewer. <small>Secretly though Yahya was a multi-billionare supporting the propeller cap buissnes to ensure 
+                    the joy of the propeller cap is spread throughout the world</small>
                 </p>
             </div>
             <div class="col-md-4">
@@ -83,9 +83,9 @@
             </div>
             <div class="col-md-8">
                 <p>
-                    A <strong>mad visionary</strong> that travels the world 365 days a year to find both new inspiring propeler cap blueprints to freshen up the stock of Deckel Inc but also old ancient propeler caps lost in time.
-                    "One day i was lost in the deserts of Egypt looking for the ancient propeler cap of Ramesses II, though a sudden sandstorm came before me and i lost my guide and gear. Now lost and thirsty i sat down awaiting my end.
-                    But then i felt a hand upon my shoulder and a sudden propeler cap filled with water infront of my face. I turned around to see Andreas there smiling. He said <strong>"I have a business proposal for you."</strong>
+                    A <strong>mad visionary</strong> that travels the world 365 days a year to find both new inspiring propeller cap blueprints to freshen up the stock of Deckel Inc but also old ancient propeller caps lost in time.
+                    "One day i was lost in the deserts of Egypt looking for the ancient propeller cap of Ramesses II, though a sudden sandstorm came before me and i lost my guide and gear. Now lost and thirsty i sat down awaiting my end.
+                    But then i felt a hand upon my shoulder and a sudden propeller cap filled with water infront of my face. I turned around to see Andreas there smiling. He said <strong>"I have a business proposal for you."</strong>
                     And thats how i joined the company"
                 </p>
             </div>
