--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
                 <div class="container-p">
                     <h1>True pleasure</h1>
                     <p>
-                        The joy of the propeler cap, brings smiles upon not only yourself. But those around you
+                        The joy of the propeller cap, brings smiles upon not only yourself. But those around you
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="container-p">
                     <h1>Dont be out be in!</h1>
                     <p>
-                        Famous celebreties around the world enjoys our products, why not join the propeler club? You will not regret it!
+                        Famous celebreties around the world enjoys our products, why not join the propeller club? You will not regret it!
                     </p>
                 </div>
             </div>
