--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="container">
-    <h3 class="h3">Popular Propeler Caps </h3>
+    <h3 class="h3">Popular Propeller Caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
@@ -18,7 +18,7 @@
                     <span class="product-new-label">Hot</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Original Propeler Cap</a></h3>
+                    <h3 class="title"><a href="#">Original Propeller Cap</a></h3>
                     <div class="price">
                         $6.40
                     </div>
@@ -60,7 +60,7 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Pirate's Propeler Cap</a></h3>
+                    <h3 class="title"><a href="#">Pirate's Propeller Cap</a></h3>
                     <div class="price">
                         $7.60
                     </div>
@@ -93,7 +93,7 @@
 </div>
 
 <div class="container">
-    <h3 class="h3">Exclusive Propeler caps </h3>
+    <h3 class="h3">Exclusive Propeller caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
@@ -108,7 +108,7 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">First Propeler Cap</a></h3>
+                    <h3 class="title"><a href="#">Robert's Cap</a></h3>
                     <div class="price">
                         $1560.99
                     </div>
