--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                 <ul class="navbar-nav ml-auto catBlock">
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a></li>
 
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
+                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Product" asp-action="index">Shop</a></li>
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link " asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
                     <li class="nav-item ">
