--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -218,8 +218,8 @@ body {
     }
 
     .product-grid4 .social li a {
-        color: #ad8649;
-        background: #f2f2f2;
+        color: #f2f2f2;
+        background: #ad8649;
         font-size: 17px;
         line-height: 36px;
         width: 40px;
