--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<Deckel_Shop.Models.Cap>
+﻿@model List<Cap>
 
-
-<div class="container">
-    <h3 class="h3">Popular Propeller Caps </h3>
+<h3 class="h3">Popular Propeller Caps</h3>
     <div class="row">
+
+@foreach (var p in Model)
+{
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
                 <div class="product-image4">
@@ -18,168 +19,169 @@
                     <span class="product-new-label">Hot</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Original Propeller Cap</a></h3>
+                    <h3 class="title"><a href="#">@p.ProductName</a></h3>
                     <div class="price">
-                        $6.40
+                        $@p.Price
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/Model2v1.jpg">
-                        <img class="pic-2" src="/Image/Model2v2.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Cap with engine</a></h3>
-                    <div class="price">
-                        $11.20
-                    </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/Model3v1.jpg">
-                        <img class="pic-2" src="/Image/Model3v2.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Pirate's Propeller Cap</a></h3>
-                    <div class="price">
-                        $7.60
-                    </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/Model4v1.jpg">
-                        <img class="pic-2" src="/Image/Model4v2.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Sunscreen Edition</a></h3>
-                    <div class="price">
-                        $12.10
-                    </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
-                </div>
-            </div>
-        </div>
+}
     </div>
-</div>
+@*<div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/Model2v1.jpg">
+                            <img class="pic-2" src="/Image/Model2v2.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Cap with engine</a></h3>
+                        <div class="price">
+                            $11.20
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/Model3v1.jpg">
+                            <img class="pic-2" src="/Image/Model3v2.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Pirate's Propeller Cap</a></h3>
+                        <div class="price">
+                            $7.60
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/Model4v1.jpg">
+                            <img class="pic-2" src="/Image/Model4v2.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Sunscreen Edition</a></h3>
+                        <div class="price">
+                            $12.10
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="container">
-    <h3 class="h3">Exclusive Propeller caps </h3>
-    <div class="row">
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/RobertMayerWithCap.jpg">
-                        <img class="pic-2" src="/Image/GuldPropCap.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Robert's Cap</a></h3>
-                    <div class="price">
-                        $1560.99
+    <div class="container">
+        <h3 class="h3">Exclusive Propeller caps </h3>
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/RobertMayerWithCap.jpg">
+                            <img class="pic-2" src="/Image/GuldPropCap.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
                     </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Robert's Cap</a></h3>
+                        <div class="price">
+                            $1560.99
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/PirateGirl2.jpg">
-                        <img class="pic-2" src="/Image/PiratePropellerCap.png">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Captains Cap</a></h3>
-                    <div class="price">
-                        $29.99
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/PirateGirl2.jpg">
+                            <img class="pic-2" src="/Image/PiratePropellerCap.png">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
                     </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Captains Cap</a></h3>
+                        <div class="price">
+                            $29.99
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/ObamaCap.jpg">
-                        <img class="pic-2" src="/Image/ObamaManequin.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">Obama's Used Cap</a></h3>
-                    <div class="price">
-                        $520.99
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/ObamaCap.jpg">
+                            <img class="pic-2" src="/Image/ObamaManequin.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
                     </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">Obama's Used Cap</a></h3>
+                        <div class="price">
+                            $520.99
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="product-grid4">
-                <div class="product-image4">
-                    <a href="#">
-                        <img class="pic-1" src="/Image/AdmiralCap.jpg">
-                        <img class="pic-2" src="/Image/AdmiralCapManequin.jpg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                    <span class="product-new-label">New</span>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">AdmiralCap</a></h3>
-                    <div class="price">
-                        $59.99
+            <div class="col-md-3 col-sm-6">
+                <div class="product-grid4">
+                    <div class="product-image4">
+                        <a href="#">
+                            <img class="pic-1" src="/Image/AdmiralCap.jpg">
+                            <img class="pic-2" src="/Image/AdmiralCapManequin.jpg">
+                        </a>
+                        <ul class="social">
+                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                        </ul>
+                        <span class="product-new-label">New</span>
                     </div>
-                    <a class="add-to-cart" href="">ADD TO CART</a>
+                    <div class="product-content">
+                        <h3 class="title"><a href="#">AdmiralCap</a></h3>
+                        <div class="price">
+                            $59.99
+                        </div>
+                        <a class="add-to-cart" href="">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<hr>
+    <hr>*@
