--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -12,15 +12,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        
+
         .container {
             border-radius: 5px;
             padding: 20px;
         }
-        
-        .container main {
-            margin-top: 100px;
-        }
+
+            .container main {
+                margin-top: 100px;
+            }
 
         .container-sm {
             height: 70px;
@@ -30,23 +30,27 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm py-3 navbar-dark navbar fixed-top shadow-sm DeckelHeader">
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark fixed-top shadow-sm DeckelHeader">
         <div class="container container-sm DeckelNavBar">
             <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="index">
                 <!-- Logo Image -->
                 <img src="~/Image//Deckel-Shop-Logo2.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <div id="" class="    ">
+
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto catBlock">
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a></li>
+                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link " asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a></li>
 
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Product" asp-action="index">Shop</a></li>
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link " asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
                     <li class="nav-item ">
                         <form class="form-inline">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <input class="form-control mr-sm-2 DeckelNavSearchBar" type="search" placeholder="Search" aria-label="Search">
                         </form>
                     </li>
                     <li class="nav-item ">
@@ -230,7 +234,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
