--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -3,14 +3,87 @@ for details on configuring this project to bundle and minify static web assets. 
 
 /* Custom css */
 
-@media screen and (max-width: 1200px) {
+
+
+@media screen and (min-width: 768px) {
+
+    nav button {
+        display: none;
+    }
+
+}
+
+    @media screen and (max-width: 992px) {
+        .DeckelNavSearchBar {
+            display: none !important;
+        }
+
+        .DeckelNavBar {
+            margin-top: -16px !important;
+            flex-wrap: nowrap !important;
+        }
+        ul li a {
+            font-size: 14px;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .DeckelNavHamburger {
+            display: block;
+        }
+    }
+
+    .DeckelNavHamburger {
+        display: none;
+    }
+
+    @media screen and (max-width: 1200px) {
+        ul.catBlock {
+            display: table;
+        }
+
+            ul.catBlock li {
+                list-style: none;
+                display: compact;
+                text-align: center;
+                vertical-align: middle;
+            }
+
+                ul.catBlock li a {
+                    display: block;
+                }
+    }
+
+    .btn-primary {
+        color: #e9cf97 !important;
+        background-color: #4e4e4e !important;
+        text-decoration: underline;
+    }
+
+
+
+    .DeckelModal {
+        background-color: #f2f2f2;
+        box-shadow: 0 4.2px 2.2px rgba(0, 0, 0, 0.02), 0 8.6px 5.3px rgba(0, 0, 0, 0.025), 0 14px 10px rgba(0, 0, 0, 0.028), 0 21.9px 17.9px rgba(0, 0, 0, 0.032), 0 37.6px 33.4px rgba(0, 0, 0, 0.038), 0 80px 80px rgba(0, 0, 0, 0.06);
+    }
+
+    .DeckelNavBar {
+        margin-top: 15px;
+        box-shadow: 0 4.2px 2.2px rgba(0, 0, 0, 0.02), 0 8.6px 5.3px rgba(0, 0, 0, 0.025), 0 14px 10px rgba(0, 0, 0, 0.028), 0 21.9px 17.9px rgba(0, 0, 0, 0.032), 0 37.6px 33.4px rgba(0, 0, 0, 0.038), 0 80px 80px rgba(0, 0, 0, 0.06);
+    }
+
+    .DeckelHeader {
+        height: 55px;
+        background-color: #4e4e4e !important;
+    }
+
     ul.catBlock {
         display: table;
     }
 
         ul.catBlock li {
             list-style: none;
-            display: compact;
+            display: table-cell;
             text-align: center;
             vertical-align: middle;
         }
@@ -18,361 +91,323 @@ for details on configuring this project to bundle and minify static web assets. 
             ul.catBlock li a {
                 display: block;
             }
-}
-
-.btn-primary {
-    color: #e9cf97 !important;
-    background-color: #4e4e4e !important;
-    text-decoration: underline;
-}
 
 
-
-.DeckelModal {
-    background-color: #f2f2f2;
-    box-shadow: 0 4.2px 2.2px rgba(0, 0, 0, 0.02), 0 8.6px 5.3px rgba(0, 0, 0, 0.025), 0 14px 10px rgba(0, 0, 0, 0.028), 0 21.9px 17.9px rgba(0, 0, 0, 0.032), 0 37.6px 33.4px rgba(0, 0, 0, 0.038), 0 80px 80px rgba(0, 0, 0, 0.06);
-}
-
-.DeckelNavBar {
-    margin-top: 10px;
-    box-shadow: 0 4.2px 2.2px rgba(0, 0, 0, 0.02), 0 8.6px 5.3px rgba(0, 0, 0, 0.025), 0 14px 10px rgba(0, 0, 0, 0.028), 0 21.9px 17.9px rgba(0, 0, 0, 0.032), 0 37.6px 33.4px rgba(0, 0, 0, 0.038), 0 80px 80px rgba(0, 0, 0, 0.06);
-}
-
-.DeckelHeader {
-    height: 55px;
-    background-color: #4e4e4e !important;
-}
-
-ul.catBlock {
-    display: table;
-}
-
-    ul.catBlock li {
-        list-style: none;
-        display: table-cell;
+    a.navbar-brand {
+        white-space: normal;
         text-align: center;
-        vertical-align: middle;
+        word-break: break-all;
     }
 
-        ul.catBlock li a {
-            display: block;
-        }
+    /* Provide sufficient contrast against white background */
+    a {
+        color: #0366d6;
+    }
 
+    .btn-primary {
+        color: #fff;
+        background-color: #1b6ec2;
+        border-color: #1861ac;
+    }
 
-a.navbar-brand {
-    white-space: normal;
-    text-align: center;
-    word-break: break-all;
-}
+    .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+        color: #fff;
+        background-color: #1b6ec2;
+        border-color: #1861ac;
+    }
 
-/* Provide sufficient contrast against white background */
-a {
-    color: #0366d6;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-/* Sticky footer styles
+    /* Sticky footer styles
 -------------------------------------------------- */
-html {
-    font-size: 14px;
-}
-
-@media (min-width: 768px) {
     html {
-        font-size: 16px;
+        font-size: 14px;
     }
-}
 
-.border-top {
-    border-top: 1px solid #e5e5e5;
-}
+    @media (min-width: 768px) {
+        html {
+            font-size: 16px;
+        }
+    }
 
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
+    .border-top {
+        border-top: 1px solid #e5e5e5;
+    }
 
-.box-shadow {
-    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
+    .border-bottom {
+        border-bottom: 1px solid #e5e5e5;
+    }
 
-button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-}
+    .box-shadow {
+        box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    }
 
-/* Sticky footer styles
+    button.accept-policy {
+        font-size: 1rem;
+        line-height: inherit;
+    }
+
+    /* Sticky footer styles
 -------------------------------------------------- */
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-}
-
-/*******************Contacts************************/
-
-
-/********************* Shopping Demo-4 **********************/
-.product-grid4, .product-grid4 .product-image4 {
-    position: relative
-}
-
-.product-grid4 {
-    font-family: Poppins,sans-serif;
-    text-align: center;
-    border-radius: 5px;
-    overflow: hidden;
-    z-index: 1;
-    transition: all .3s ease 0s
-}
-
-    .product-grid4:hover {
-        box-shadow: 0 0 10px rgba(0,0,0,.2)
+    html {
+        position: relative;
+        min-height: 100%;
     }
 
-    .product-grid4 .product-image4 a {
-        display: block
+    body {
+        /* Margin bottom by footer height */
+        margin-bottom: 60px;
     }
 
-    .product-grid4 .product-image4 img {
+    .footer {
+        position: absolute;
+        bottom: 0;
         width: 100%;
-        height: auto
+        white-space: nowrap;
+        line-height: 60px; /* Vertically center the text there */
     }
 
-    .product-grid4 .pic-1 {
-        opacity: 1;
-        transition: all .5s ease-out 0s
+    /*******************Contacts************************/
+
+
+    /********************* Shopping Demo-4 **********************/
+    .product-grid4, .product-grid4 .product-image4 {
+        position: relative
     }
 
-    .product-grid4:hover .pic-1 {
-        opacity: 0
-    }
-
-    .product-grid4 .pic-2 {
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        transition: all .5s ease-out 0s
-    }
-
-    .product-grid4:hover .pic-2 {
-        opacity: 1
-    }
-
-    .product-grid4 .social {
-        width: 180px;
-        padding: 0;
-        margin: 0 auto;
-        list-style: none;
-        position: absolute;
-        right: 0;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
+    .product-grid4 {
+        font-family: Poppins,sans-serif;
+        text-align: center;
+        border-radius: 5px;
+        overflow: hidden;
+        z-index: 1;
         transition: all .3s ease 0s
     }
 
-        .product-grid4 .social li {
-            display: inline-block;
-            opacity: 0;
-            transition: all .7s
+        .product-grid4:hover {
+            box-shadow: 0 0 10px rgba(0,0,0,.2)
         }
 
-            .product-grid4 .social li:nth-child(1) {
-                transition-delay: .15s
-            }
-
-            .product-grid4 .social li:nth-child(2) {
-                transition-delay: .3s
-            }
-
-            .product-grid4 .social li:nth-child(3) {
-                transition-delay: .45s
-            }
-
-    .product-grid4:hover .social li {
-        opacity: 1
-    }
-
-    .product-grid4 .social li a {
-        color: #f2f2f2;
-        background: #ad8649;
-        font-size: 17px;
-        line-height: 36px;
-        width: 40px;
-        height: 36px;
-        border-radius: 2px;
-        margin: 0 5px;
-        display: block;
-        transition: all .3s ease 0s
-    }
-
-        .product-grid4 .social li a:hover {
-            color: #fff;
-            background: #7d8185
+        .product-grid4 .product-image4 a {
+            display: block
         }
 
-        .product-grid4 .social li a:after, .product-grid4 .social li a:before {
-            content: attr(data-tip);
-            color: #fff;
-            background-color: #000;
-            font-size: 12px;
-            line-height: 20px;
-            border-radius: 3px;
-            padding: 0 5px;
-            white-space: nowrap;
-            opacity: 0;
-            transform: translateX(-50%);
+        .product-grid4 .product-image4 img {
+            width: 100%;
+            height: auto
+        }
+
+        .product-grid4 .pic-1 {
+            opacity: 1;
+            transition: all .5s ease-out 0s
+        }
+
+        .product-grid4:hover .pic-1 {
+            opacity: 0
+        }
+
+        .product-grid4 .pic-2 {
             position: absolute;
-            left: 50%;
-            top: -30px
+            top: 0;
+            left: 0;
+            opacity: 0;
+            transition: all .5s ease-out 0s
         }
 
-        .product-grid4 .social li a:after {
-            content: '';
-            height: 15px;
-            width: 15px;
-            border-radius: 0;
-            transform: translateX(-50%) rotate(45deg);
-            top: -22px;
-            z-index: -1
-        }
-
-        .product-grid4 .social li a:hover:after, .product-grid4 .social li a:hover:before {
+        .product-grid4:hover .pic-2 {
             opacity: 1
         }
 
-    .product-grid4 .product-discount-label, .product-grid4 .product-new-label {
-        color: #fff;
-        background-color: #ad8649;
-        font-size: 13px;
-        font-weight: 800;
-        text-transform: uppercase;
-        line-height: 45px;
-        height: 45px;
-        width: 45px;
-        border-radius: 50%;
-        position: absolute;
-        left: 10px;
-        top: 15px;
-        transition: all .3s
-    }
-
-    .product-grid4 .product-discount-label {
-        left: auto;
-        right: 10px;
-        background-color: #7d8185
-    }
-
-    .product-grid4:hover .product-new-label {
-        opacity: 0
-    }
-
-    .product-grid4 .product-content {
-        padding: 25px
-    }
-
-    .product-grid4 .title {
-        font-size: 15px;
-        font-weight: 400;
-        text-transform: capitalize;
-        margin: 0 0 7px;
-        transition: all .3s ease 0s
-    }
-
-        .product-grid4 .title a {
-            color: #222
+        .product-grid4 .social {
+            width: 180px;
+            padding: 0;
+            margin: 0 auto;
+            list-style: none;
+            position: absolute;
+            right: 0;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            transition: all .3s ease 0s
         }
 
-            .product-grid4 .title a:hover {
-                color: #1b6ec2
+            .product-grid4 .social li {
+                display: inline-block;
+                opacity: 0;
+                transition: all .7s
             }
 
-    .product-grid4 .price {
-        color: #4e4e4e;
-        font-size: 17px;
-        font-weight: 700;
-        margin: 0 2px 15px 0;
-        display: block
-    }
+                .product-grid4 .social li:nth-child(1) {
+                    transition-delay: .15s
+                }
 
-        .product-grid4 .price span {
-            color: #909090;
-            font-size: 13px;
-            font-weight: 400;
-            letter-spacing: 0;
-            text-decoration: line-through;
-            text-align: left;
-            vertical-align: middle;
-            display: inline-block
+                .product-grid4 .social li:nth-child(2) {
+                    transition-delay: .3s
+                }
+
+                .product-grid4 .social li:nth-child(3) {
+                    transition-delay: .45s
+                }
+
+        .product-grid4:hover .social li {
+            opacity: 1
         }
 
-    .product-grid4 .add-to-cart {
-        border: 1px solid #e5e5e5;
-        display: inline-block;
-        padding: 10px 20px;
-        color: #888;
-        font-weight: 600;
-        font-size: 14px;
-        border-radius: 4px;
-        transition: all .3s
+        .product-grid4 .social li a {
+            color: #f2f2f2;
+            background: #ad8649;
+            font-size: 17px;
+            line-height: 36px;
+            width: 40px;
+            height: 36px;
+            border-radius: 2px;
+            margin: 0 5px;
+            display: block;
+            transition: all .3s ease 0s
+        }
+
+            .product-grid4 .social li a:hover {
+                color: #fff;
+                background: #7d8185
+            }
+
+            .product-grid4 .social li a:after, .product-grid4 .social li a:before {
+                content: attr(data-tip);
+                color: #fff;
+                background-color: #000;
+                font-size: 12px;
+                line-height: 20px;
+                border-radius: 3px;
+                padding: 0 5px;
+                white-space: nowrap;
+                opacity: 0;
+                transform: translateX(-50%);
+                position: absolute;
+                left: 50%;
+                top: -30px
+            }
+
+            .product-grid4 .social li a:after {
+                content: '';
+                height: 15px;
+                width: 15px;
+                border-radius: 0;
+                transform: translateX(-50%) rotate(45deg);
+                top: -22px;
+                z-index: -1
+            }
+
+            .product-grid4 .social li a:hover:after, .product-grid4 .social li a:hover:before {
+                opacity: 1
+            }
+
+        .product-grid4 .product-discount-label, .product-grid4 .product-new-label {
+            color: #fff;
+            background-color: #ad8649;
+            font-size: 13px;
+            font-weight: 800;
+            text-transform: uppercase;
+            line-height: 45px;
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            position: absolute;
+            left: 10px;
+            top: 15px;
+            transition: all .3s
+        }
+
+        .product-grid4 .product-discount-label {
+            left: auto;
+            right: 10px;
+            background-color: #7d8185
+        }
+
+        .product-grid4:hover .product-new-label {
+            opacity: 0
+        }
+
+        .product-grid4 .product-content {
+            padding: 25px
+        }
+
+        .product-grid4 .title {
+            font-size: 15px;
+            font-weight: 400;
+            text-transform: capitalize;
+            margin: 0 0 7px;
+            transition: all .3s ease 0s
+        }
+
+            .product-grid4 .title a {
+                color: #222
+            }
+
+                .product-grid4 .title a:hover {
+                    color: #1b6ec2
+                }
+
+        .product-grid4 .price {
+            color: #4e4e4e;
+            font-size: 17px;
+            font-weight: 700;
+            margin: 0 2px 15px 0;
+            display: block
+        }
+
+            .product-grid4 .price span {
+                color: #909090;
+                font-size: 13px;
+                font-weight: 400;
+                letter-spacing: 0;
+                text-decoration: line-through;
+                text-align: left;
+                vertical-align: middle;
+                display: inline-block
+            }
+
+        .product-grid4 .add-to-cart {
+            border: 1px solid #e5e5e5;
+            display: inline-block;
+            padding: 10px 20px;
+            color: #888;
+            font-weight: 600;
+            font-size: 14px;
+            border-radius: 4px;
+            transition: all .3s
+        }
+
+        .product-grid4:hover .add-to-cart {
+            border: 1px solid transparent;
+            background: #ad8649;
+            color: #fff
+        }
+
+        .product-grid4 .add-to-cart:hover {
+            background-color: #4e4e4e;
+            box-shadow: 0 0 10px rgba(0,0,0,.5)
+        }
+
+    @media only screen and (max-width:990px) {
+        .product-grid4 {
+            margin-bottom: 30px
+        }
     }
 
-    .product-grid4:hover .add-to-cart {
-        border: 1px solid transparent;
-        background: #ad8649;
-        color: #fff
+    .form-text {
+        display: block;
+        margin-top: 0.25rem;
+        margin-left: 0;
+        width: 50%;
     }
 
-    .product-grid4 .add-to-cart:hover {
-        background-color: #4e4e4e;
-        box-shadow: 0 0 10px rgba(0,0,0,.5)
+    .form-row {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin: 0;
+        width: 70%
     }
 
-@media only screen and (max-width:990px) {
-    .product-grid4 {
-        margin-bottom: 30px
+    .needs-validation {
+        margin-left: auto;
     }
-}
-.form-text {
-    display: block;
-    margin-top: 0.25rem;
-    margin-left: 0;
-    width: 50%;
-}
-
-.form-row {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 0;
-    width: 70%
-}
-
-.needs-validation {
-    margin-left: auto;
-}
