Navbar can now expand and show links

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -7,8 +7,39 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" />
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>*@
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script type="text/javascript">(function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })();</script>
     @RenderSection("Styles", false)
+
+
+<script type='text/javascript'>
+
+    //$('#navBarButton').click(function () { $('#test22').css('height', 'auto'); });
+    //$('#navBarButton').click(function () { $('#test22').toggleClass("DeckelContainerSm"); });
+
+    //$('#navBarButton').toggle(function () {
+    //    $("#test22").css({ height: "auto" });
+    //}, function () {
+    //        $("#test22").css({ height: "auto" });
+    //});
+
+    //window.onload = function () {
+    //    var ele = document.getElementById("navBarButton");
+    //    ele.onclick = function () {
+    //        var nav = document.getElementById("test22");
+
+    //        nav.className += " DeckelContainerSm";
+    //    };
+
+        function myFunction() {
+            var element = document.getElementById("test22");
+            element.classList.toggle("DeckelContainerSm");
+            /*element.classList.toggle("container-sm")*/;
+        }
+
+
+</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -22,21 +53,18 @@
                 margin-top: 100px;
             }
 
-        .container-sm {
-            height: 70px;
-            background-color: #f2f2f2;
-        }
+        
     </style>
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg py-3 navbar-dark fixed-top shadow-sm DeckelHeader">
-        <div class="container container-sm DeckelNavBar">
+        <div id="test22" class="container container-sm DeckelNavBar" >
             <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="index">
                 <!-- Logo Image -->
                 <img src="~/Image//Deckel-Shop-Logo2.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button onclick="myFunction()" class="navbar-toggler" id="navBarButton" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -231,7 +259,7 @@
     </footer>
     <!-- Footer -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
