--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -4,9 +4,22 @@ for details on configuring this project to bundle and minify static web assets. 
 /* Custom css */
 
 
+.DeckelContainerSm {
+    height: auto !important;
+    transition: all 3s ease-out 0s;
+}
+
+.container-sm {
+    height: 70px;
+    background-color: #f2f2f2;
+}
+
+/*#test22 {
+    height: 70px;
+    background-color: #f2f2f2;
+}*/
 
 @media screen and (min-width: 768px) {
-
     nav button {
         display: none;
     }
@@ -25,6 +38,21 @@ for details on configuring this project to bundle and minify static web assets. 
         ul li a {
             font-size: 14px;
         }
+
+        ul.catBlock {
+            display: flex !important;
+        }
+
+            ul.catBlock li {
+                list-style: none;
+                display: list-item !important;
+                text-align: left !important;
+                vertical-align: middle;
+            }
+
+                ul.catBlock li a {
+                    display: block;
+                }
     }
 
     @media screen and (max-width: 768px) {
