Added Description for product

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -19,6 +19,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Original Propeller Cap</a></h3>
+                    <p><small>Original and belowed by all</small></p>
                     <div class="price">
                         $6.40
                     </div>
@@ -40,6 +41,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Cap with engine</a></h3>
+                    <p><small>Original cap with Engine</small></p>
                     <div class="price">
                         $11.20
                     </div>
@@ -61,6 +63,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Pirate's Propeller Cap</a></h3>
+                    <p><small>A pirates life for you!</small></p>
                     <div class="price">
                         $7.60
                     </div>
@@ -82,6 +85,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Sunscreen Edition</a></h3>
+                    <p><small>Defender againt the sun!</small></p>
                     <div class="price">
                         $12.10
                     </div>
@@ -109,6 +113,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Robert's Cap</a></h3>
+                    <p><small>Roberts Original Cap</small></p>
                     <div class="price">
                         $1560.99
                     </div>
@@ -130,6 +135,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Captains Cap</a></h3>
+                    <p><small>A true Captain i see!</small></p>
                     <div class="price">
                         $29.99
                     </div>
@@ -151,6 +157,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Obama's Used Cap</a></h3>
+                    <p><small>Obamas once used cap</small></p>
                     <div class="price">
                         $520.99
                     </div>
@@ -173,6 +180,7 @@
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">AdmiralCap</a></h3>
+                    <p><small>Salute the Admiral!</small></p>
                     <div class="price">
                         $59.99
                     </div>
