Changed icons Shop

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<Cap>
 
 <h3 class="h3">Popular Propeller Caps</h3>
-    <div class="row">
+<div class="row">
 
-@foreach (var p in Model)
-{
+    @foreach (var p in Model)
+    {
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
                 <div class="product-image4">
@@ -13,7 +13,7 @@
                         <img class="pic-2" src="/Image/Model1v2.jpg">
                     </a>
                     <ul class="social">
-                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                     <span class="product-new-label">Hot</span>
@@ -21,14 +21,14 @@
                 <div class="product-content">
                     <h3 class="title"><a href="#">@p.ProductName</a></h3>
                     <div class="price">
-                        $@p.Price
+                        @p.Price SEK
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
             </div>
         </div>
-}
-    </div>
+    }
+</div>
 @*<div class="col-md-3 col-sm-6">
                 <div class="product-grid4">
                     <div class="product-image4">
@@ -37,7 +37,7 @@
                             <img class="pic-2" src="/Image/Model2v2.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -58,7 +58,7 @@
                             <img class="pic-2" src="/Image/Model3v2.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -79,7 +79,7 @@
                             <img class="pic-2" src="/Image/Model4v2.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -105,7 +105,7 @@
                             <img class="pic-2" src="/Image/GuldPropCap.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -126,7 +126,7 @@
                             <img class="pic-2" src="/Image/PiratePropellerCap.png">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -147,7 +147,7 @@
                             <img class="pic-2" src="/Image/ObamaManequin.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                     </div>
@@ -168,7 +168,7 @@
                             <img class="pic-2" src="/Image/AdmiralCapManequin.jpg">
                         </a>
                         <ul class="social">
-                            <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                             <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                         </ul>
                         <span class="product-new-label">New</span>
